# ChangeLog for media-plugins/gst-plugins-twolame
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-twolame/ChangeLog,v 1.16 2010/02/15 17:06:22 leio Exp $

  15 Feb 2010; Mart Raudsepp <leio@gentoo.org>
  -gst-plugins-twolame-0.10.11.ebuild:
  Remove old

  05 Jan 2010; nixnut <nixnut@gentoo.org>
  gst-plugins-twolame-0.10.12.ebuild:
  ppc stable #290343

  29 Dec 2009; Raúl Porcel <armin76@gentoo.org>
  gst-plugins-twolame-0.10.12.ebuild:
  sparc stable wrt #290343

  29 Nov 2009; Tobias Klausmann <klausman@gentoo.org>
  gst-plugins-twolame-0.10.12.ebuild:
  Stable on alpha, bug #290343

  18 Nov 2009; Christian Faulhammer <fauli@gentoo.org>
  gst-plugins-twolame-0.10.12.ebuild:
  x86 stable, bug 290343

  17 Nov 2009; Brent Baude <ranger@gentoo.org>
  gst-plugins-twolame-0.10.12.ebuild:
  Marking gst-plugins-twolame-0.10.12 ppc64 stable for bug 290343

*gst-plugins-twolame-0.10.13 (16 Nov 2009)

  16 Nov 2009; Mart Raudsepp <leio@gentoo.org>
  +gst-plugins-twolame-0.10.13.ebuild:
  Version bump to be in sync with the rest; no code changes

  10 Nov 2009; Olivier Crête <tester@gentoo.org>
  gst-plugins-twolame-0.10.12.ebuild:
  Stable on amd64, bug #290343

*gst-plugins-twolame-0.10.12 (07 Sep 2009)

  07 Sep 2009; Olivier Crête <tester@gentoo.org>
  +gst-plugins-twolame-0.10.12.ebuild:
  Version bump

  01 Jul 2009; Raúl Porcel <armin76@gentoo.org>
  gst-plugins-twolame-0.10.11.ebuild:
  sparc stable wrt #266986

  21 May 2009; Brent Baude <ranger@gentoo.org>
  gst-plugins-twolame-0.10.11.ebuild:
  Marking gst-plugins-twolame-0.10.11 ppc64 stable for bug 266986

  21 May 2009; Brent Baude <ranger@gentoo.org>
  gst-plugins-twolame-0.10.11.ebuild:
  Marking gst-plugins-twolame-0.10.11 ppc stable for bug 266986

  14 May 2009; Markus Meier <maekke@gentoo.org>
  gst-plugins-twolame-0.10.11.ebuild:
  amd64 stable, bug #266986

  12 May 2009; Christian Faulhammer <fauli@gentoo.org>