@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/gst-plugins-twolame
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-twolame/ChangeLog,v 1.16 2010/02/15 17:06:22 leio Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-twolame/ChangeLog,v 1.17 2010/03/19 09:42:11 pacho Exp $
+
+  19 Mar 2010; Pacho Ramos <pacho@gentoo.org>
+  gst-plugins-twolame-0.10.13.ebuild:
+  amd64 stable, bug 308379
 
   15 Feb 2010; Mart Raudsepp <leio@gentoo.org>
   -gst-plugins-twolame-0.10.11.ebuild:
